examples/Passing/Loops/simple_for_3.c
int main() {
    int a = 5;
    for (;;) {
        break;
    }
    return a;
}
