examples/Failing/Variables/late_declaration.c
int main() {
    a = 5;
    int a;
    return a;
}
